# bookworm-telegram-bot

./: .gitignore  README.md  docker-compose.yml
bot/: Dockerfile  bookworm.py  example.env  google_client.py  pyproject.toml
